// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when there are no users 1`] = `
<div
  className="container"
>
  <img
    alt=""
    className="imageContainer"
    src="avatar.png"
  />
  <div
    className="contentContainer"
  >
    <div
      className="name"
    >
      name: 
      
    </div>
    <button
      onClick={[Function]}
    >
      Follow
    </button>
    <input
      checked={false}
      className="hvrIconPop"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="date"
    >
      date: 
      
    </div>
    <div
      className="time"
    >
      reading time: 
      
    </div>
  </div>
</div>
`;

exports[`renders correctly when there is one user 1`] = `
<div
  className="container"
>
  <img
    alt="Walton Morton"
    className="imageContainer"
    src="avatar.png"
  />
  <div
    className="contentContainer"
  >
    <div
      className="name"
    >
      name: 
      Walton Morton
    </div>
    <button
      onClick={[Function]}
    >
      Unfollow
    </button>
    <input
      checked={false}
      className="hvrIconPop"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="date"
    >
      date: 
      Aug 9
    </div>
    <div
      className="time"
    >
      reading time: 
      20
    </div>
  </div>
</div>
`;
